Fix bottom logo positioning and row wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,6 @@
         border: none !important;
     }
 
-
     #Layer_1 {
         float: left;
         height: 55px;
@@ -74,6 +73,8 @@
 
 .nav-logo {
     fill: #f72210;
+    min-width: 236px;
+    max-width: 236px;
 }
 
 .bars,
